# Aggregation-Federated-Learning-Analysis

./: .gitignore  README.md  analysis.py  client_app.py  generate_tables.py  partitioner.ipynb  pyproject.toml  run_configuration.py  run_experiments.py  server_app.py  strategy.py  strategy_mixin.py  task.py
other_scripts/: analysis_backdoor.py  analysis_labelflipping.py  generate_tables.py  partitioner.ipynb  plot_overfitting.py
results/tables/: table_01_iid_full_r40.md  table_02_noniid_a05_full_r40.md  table_03_noniid_a01_full_r40.md  table_04_noniid_a003_full_r40.md  table_05_iid_frac08_r40.md  table_06_noniid_a05_frac08_r40.md  table_07_noniid_a01_frac08_r40.md  table_08_noniid_a003_frac08_r40.md  table_09_iid_frac07_r40.md  table_10_noniid_a05_frac07_r40.md  table_11_noniid_a01_frac07_r40.md  table_12_noniid_a003_frac07_r40.md  table_13_personalization_r40.md  table_14_attack_backdoor_iid_1_malicious_r40.md  table_15_attack_backdoor_noniid_a05_1_malicious_r40.md  table_16_attack_backdoor_noniid_a01_1_malicious_r40.md  table_17_attack_backdoor_iid_2_malicious_r40.md  table_18_attack_backdoor_noniid_a05_2_malicious_r40.md  table_19_attack_backdoor_noniid_a01_2_malicious_r40.md  table_20_attack_byzantine_iid_r40.md  table_21_attack_byzantine_noniid_a05_r40.md  table_22_attack_byzantine_noniid_a01_r40.md  table_23_attack_labelflip_iid_1_malicious_r40.md  table_24_attack_labelflip_noniid_a05_1_malicious_r40.md  table_25_attack_labelflip_noniid_a01_1_malicious_r40.md  table_26_attack_labelflip_iid_2_malicious_r40.md  table_27_attack_labelflip_noniid_a05_2_malicious_r40.md  (+4 more)
